@@ -1,0 +1,13 @@
+
+"im a comment"
+
+Object subclass: #TestKeyword
+	instanceVariableNames: 'instVars'
+	classVariableNames: 'ClassVars'
+	poolDictionaries: 'Pool'
+	category: 'Test'!
+
+example
+  ^ 'foo' + 'bar'
+! !
+
